src/app/alino-app/components/navbar/navbar.module.css
.navbarContainer {
  width: 25vw;
  min-width: 25vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 25px;
}

.navbar {
  position: relative;
  width: 100%;
  max-width: 1366px;
  height: 100%;
  background-color: rgb(255, 255, 255);
  border-radius: 20px;
  padding: 25px;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.SubjectsCardsSection {
  display: flex;
  flex-direction: column;
  gap: 5px;
  overflow-x: hidden;
  overflow-y: scroll;
}

.SubjectsCardsSection::-webkit-scrollbar {
  display: none;
}

.divCardsContainer {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.navbarTitle {
  margin-left: 0px;
  color: #1c1c1c;
}

